--- a/front/public/index.html
+++ b/front/public/index.html
@@ -43,7 +43,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>React App</title>
+    <title>E-Tickets</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
